# grout-wm

./: Cargo.toml  LICENSE  README.md  build.rs  default.yaml  user.yaml
.github/workflows/: build.yaml  release.yaml
resources/: res.rc
src/: appwindow.rs  arrange.rs  config.rs  layout.rs  lib.rs  main.rs  rect.rs  virtual_desktop.rs  win32.rs  window.rs  windowmanager.rs  wm.rs
src/win32/: com.rs  dwm.rs  mod.rs  taskbar.rs  theme.rs  virtualdesktop.rs
