[package]
name = "grout-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
simple-logging = "2.0.2"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Globalization", "Win32_Security", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging" ] }

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3.1"
